:hammer: 카테고리 목록추가 ..여러시도중

--- a/_posts/2019-02-16-html-lang.md
+++ b/_posts/2019-02-16-html-lang.md
@@ -1,7 +1,8 @@
 ---
 title: "[HTML] 웹접근성을 위한 기본 언어 명시하기"
 date: 2019-02-16 11:10:00 -0400
-categories: HTML 웹접근성 lang
+categories: HTML 접근성 lang
+tags: 접근성 lang Accessibility
 ---
 
 기본 언어 명시하기
