--- a/_posts/2019-01-30-html5-table.md
+++ b/_posts/2019-01-30-html5-table.md
@@ -1,7 +1,8 @@
 ---
 title: "[HTML5] 웹표준에 맞게 table 구성하기"
 date: 2019-01-30 10:05:00 -0400
-categories: HTML5 웹표준 table
+categories: HTML5
+tags: HTML5, table, 웹표준
 ---
 
 table 태그를 사용하는 것을 좋아하진 않지만, 필요한 부분에서는 사용 해야 할 때가 있습니다. 
