:hammer: 태그 추가 및 모바일 스타일 수정

--- a/_posts/2018-12-18-webfont.md
+++ b/_posts/2018-12-18-webfont.md
@@ -1,7 +1,8 @@
 ---
 title: "[CSS] Webfont에 대해 알아보자"
 date: 2018-12-18 18:10:00 -0400
-categories: webfont CSS
+categories: CSS
+tags: 웹폰트 Webfont 
 ---
 
 webfont 웹폰트?
