--- a/_posts/2018-12-19-KWCAG-2.1.md
+++ b/_posts/2018-12-19-KWCAG-2.1.md
@@ -1,7 +1,8 @@
 ---
 title: "[HTML5] 한국형 웹 콘텐츠 접근성 가이드(KWCAG) 2.1"
 date: 2018-12-19 15:00:00 -0400
-categories: HTML5 CSS Accessibility
+categories: HTML5 CSS 접근성
+tags: 접근성 Accessibility KWCAG 
 ---
 
 한국형 웹 콘텐츠 접근성 가이드 2.1
