--- a/_posts/2018-12-19-Sass-SCSS.md
+++ b/_posts/2018-12-19-Sass-SCSS.md
@@ -1,7 +1,8 @@
 ---
 title: "[Sass] Sass와 SCSS의 차이"
 date: 2018-12-19 16:00:00 -0400
-categories: Sass SCSS CSS전처리기
+categories: CSS
+tags: Sass CSS전처리기 SCSS
 ---
 
 Sass와 SCSS의 차이에 관해
