--- a/_posts/2018-12-16-bem.md
+++ b/_posts/2018-12-16-bem.md
@@ -1,7 +1,8 @@
 ---
 title: "[CSS] BEM 방법론"
 date: 2018-12-16 15:05:00 -0400
-categories: CSS update
+categories: CSS 
+categories: CSS BEM
 ---
 
 BEM 방법론에 대해 알아보자
