--- a/_posts/2018-12-17-git-stash.md
+++ b/_posts/2018-12-17-git-stash.md
@@ -2,6 +2,7 @@
 title: "[Git] Git stash에 대해 알아보자"
 date: 2018-12-17 18:20:00 -0400
 categories: Git stash
+tags: stash study 
 ---
 
 Git stash에 대해 알아보자
